fix text flickering

--- a/src/theme/fonts.css
+++ b/src/theme/fonts.css
@@ -7,6 +7,7 @@
         url('../fonts/zen-maru-gothic-v7-latin-300.woff2') format('woff2'),
         /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('../fonts/zen-maru-gothic-v7-latin-300.woff') format('woff');
+        font-display: swap;
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -20,6 +21,8 @@
         /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('../fonts/zen-maru-gothic-v7-latin-regular.woff') format('woff');
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    font-display: swap;
+
 }
 
 /* zen-maru-gothic-700 - latin */
@@ -32,6 +35,8 @@
         /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('../fonts/zen-maru-gothic-v7-latin-700.woff') format('woff');
     /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    font-display: swap;
+
 }
 
 
